# KrakenTradingKit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
kraken_kit/: __init__.py  exceptions.py  formatting.py  futures_client.py  futures_connector.py  rate_limiter.py  spot_client.py  spot_connector.py
notebooks/: futures.ipynb  public_data.ipynb  spot.ipynb
